--- a/LoopLab/index.html
+++ b/LoopLab/index.html
@@ -11,7 +11,39 @@
 </head>
 <body>
     <!--START HERE-->
-    
+    <div class="nav navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a href="#" class="navbar-brand">LoopLAB</a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#looplab-navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto" id="looplab-navbar">
+                    <li class="nav-item">
+                        <a href="#home" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#explore" class="nav-link">Explore</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#create" class="nav-link">Create</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#share" class="nav-link">Share</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="home">
+            <div class="jumbotron">
+
+            </div>
+        </div>
+        <div id="explore"></div>
+        <div id="create"></div>
+        <div id="share"></div>
+    </div>
 
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
