Added checkboxes and lorem text

--- a/LoopLab/index.html
+++ b/LoopLab/index.html
@@ -34,16 +34,48 @@
                 </ul>
             </div>
         </div>
+    </div>
 
-        <div id="home">
-            <div class="jumbotron">
-
+    <div class="jumbotron-fluid" id="home">
+        <div class="darken-existing-bg py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 text-white">
+                        <h1 class="display-4">
+                            Build social profiles and gain business profits
+                        </h1>
+                        <div class="media align-items-center my-5">
+                            <i class="fas fa-check rounded blue-check text-rem-3 p-1 mx-4"></i>
+                            <div class="media-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, magnam voluptatum praesentium voluptate placeat voluptatibus.
+                            </div>
+                        </div>
+                        <div class="media align-items-center my-5">
+                            <i class="fas fa-check rounded blue-check text-rem-3 p-1 mx-4"></i>
+                            <div class="media-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, magnam voluptatum praesentium voluptate placeat voluptatibus.
+                            </div>
+                        </div>
+                        <div class="media align-items-center my-5">
+                            <i class="fas fa-check rounded blue-check text-rem-3 p-1 mx-4"></i>
+                            <div class="media-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, magnam voluptatum praesentium voluptate placeat voluptatibus.
+                            </div>
+                        </div>
+                        <div class="media"></div>
+                        <div class="media"></div>
+                    </div>
+                    <div class="col-md-4">
+                        Here is some more text
+                    </div>
+                </div>
             </div>
         </div>
-        <div id="explore"></div>
-        <div id="create"></div>
-        <div id="share"></div>
+
     </div>
+    <div id="explore"></div>
+    <div id="create"></div>
+    <div id="share"></div>
 
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
