--- a/LoopLab/index.html
+++ b/LoopLab/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--START HERE-->
-    <div class="nav navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+    <div class="nav navbar navbar-expand-sm navbar-dark bg-dark fixed-top nav-border-bottom-blue">
         <div class="container">
             <a href="#" class="navbar-brand">LoopLAB</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#looplab-navbar">
