--- a/LoopLab/index.html
+++ b/LoopLab/index.html
@@ -36,28 +36,28 @@
         </div>
     </div>
 
-    <div class="jumbotron-fluid" id="home">
+    <div class="jumbotron-fluid mt-5" id="home">
         <div class="darken-existing-bg py-5">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-8 text-white">
+                <div class="row align-items-center">
+                    <div class="col-md-8 text-white my-5">
                         <h1 class="display-4">
                             Build social profiles and gain business profits
                         </h1>
-                        <div class="media align-items-center my-5">
-                            <i class="fas fa-check rounded blue-check text-rem-3 p-1 mx-4"></i>
+                        <div class="media align-items-center mt-5">
+                            <i class="fas fa-check rounded blue-check text-rem-2 p-1 mx-4"></i>
                             <div class="media-body">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, magnam voluptatum praesentium voluptate placeat voluptatibus.
                             </div>
                         </div>
-                        <div class="media align-items-center my-5">
-                            <i class="fas fa-check rounded blue-check text-rem-3 p-1 mx-4"></i>
+                        <div class="media align-items-center mt-5">
+                            <i class="fas fa-check rounded blue-check text-rem-2 p-1 mx-4"></i>
                             <div class="media-body">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, magnam voluptatum praesentium voluptate placeat voluptatibus.
                             </div>
                         </div>
-                        <div class="media align-items-center my-5">
-                            <i class="fas fa-check rounded blue-check text-rem-3 p-1 mx-4"></i>
+                        <div class="media align-items-center mt-5">
+                            <i class="fas fa-check rounded blue-check text-rem-2 p-1 mx-4"></i>
                             <div class="media-body">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, magnam voluptatum praesentium voluptate placeat voluptatibus.
                             </div>
@@ -66,7 +66,19 @@
                         <div class="media"></div>
                     </div>
                     <div class="col-md-4">
-                        Here is some more text
+                        <div class="card bg-primary text-white text-center">
+                            <div class="card-body">
+                                <h3>Sign Up Today</h3>
+                                <p>Please fill out this form to register</p>
+                                <form>
+                                    <input class="form-control form-control-lg my-2" type="text" placeholder="Username">
+                                    <input class="form-control form-control-lg my-2" type="text" placeholder="Email">
+                                    <input class="form-control form-control-lg my-2" type="password" placeholder="Password">
+                                    <input class="form-control form-control-lg my-2" type="password" placeholder="Confirm Password">
+                                </form>
+                                <button class="btn btn-outline-light btn-block">Submit</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
