Finished explore section

--- a/LoopLab/index.html
+++ b/LoopLab/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <div class="jumbotron-fluid mt-5" id="home">
+    <div class="container-fluid mt-5" id="home">
         <div class="darken-existing-bg py-5">
             <div class="container">
                 <div class="row align-items-center">
@@ -45,25 +45,23 @@
                             Build social profiles and gain business profits
                         </h1>
                         <div class="media align-items-center mt-5">
-                            <i class="fas fa-check rounded blue-check text-rem-2 p-1 mx-4"></i>
+                            <i class="fas fa-check rounded blue-check fa-2x p-1 mx-4"></i>
                             <div class="media-body">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, magnam voluptatum praesentium voluptate placeat voluptatibus.
                             </div>
                         </div>
                         <div class="media align-items-center mt-5">
-                            <i class="fas fa-check rounded blue-check text-rem-2 p-1 mx-4"></i>
+                            <i class="fas fa-check rounded blue-check fa-2x p-1 mx-4"></i>
                             <div class="media-body">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, magnam voluptatum praesentium voluptate placeat voluptatibus.
                             </div>
                         </div>
                         <div class="media align-items-center mt-5">
-                            <i class="fas fa-check rounded blue-check text-rem-2 p-1 mx-4"></i>
+                            <i class="fas fa-check rounded blue-check fa-2x p-1 mx-4"></i>
                             <div class="media-body">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, magnam voluptatum praesentium voluptate placeat voluptatibus.
                             </div>
                         </div>
-                        <div class="media"></div>
-                        <div class="media"></div>
                     </div>
                     <div class="col-md-4">
                         <div class="card bg-primary text-white text-center">
@@ -83,9 +81,43 @@
                 </div>
             </div>
         </div>
-
     </div>
-    <div id="explore"></div>
+    <div id="explore">
+        <div class="container-fluid bg-dark">
+            <div class="container text-white text-center py-5">
+                <h1 class="display-4">Explore</h1>
+                <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, ipsum in voluptates at commodi unde minima cumque fuga expedita alias maxime sint obcaecati voluptatem placeat est soluta eligendi. Blanditiis, itaque?</p>
+                <button class="btn btn-outline-secondary">Find out more</button>
+            </div>
+        </div>
+        <div class="container-fluid bg-light">
+            <div class="container">
+                <div class="row align-items-center py-5">
+                    <div class="col-sm-6">
+                        <img class="img-fluid rounded-circle" src="img/looplab/explore-section1.jpg" alt="">
+                    </div>
+                    <div class="col-sm-6 text-muted">
+                        <h3>Explore & Connect</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, earum. Voluptas dolorum autem nesciunt omnis soluta, aperiam fugit illo porro.
+                        </p>
+                        <div class="media align-items-center mt-4">
+                            <i class="fas fa-check-square fa-3x white-check mx-3"></i>
+                            <div class="media-body">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto tempore quo molestias rem, consectetur deserunt?
+                            </div>
+                        </div>
+                        <div class="media align-items-center mt-4">
+                            <i class="fas fa-check-square fa-3x white-check mx-3"></i>
+                            <div class="media-body">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto tempore quo molestias rem, consectetur deserunt?
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="create"></div>
     <div id="share"></div>
 
