Moved images out to parent repository

--- a/LoopLab/index.html
+++ b/LoopLab/index.html
@@ -94,7 +94,7 @@
             <div class="container">
                 <div class="row align-items-center py-5">
                     <div class="col-sm-6">
-                        <img class="img-fluid rounded-circle" src="img/looplab/explore-section1.jpg" alt="">
+                        <img class="img-fluid rounded-circle" src="../ProjectImages/looplab/explore-section1.jpg" alt="">
                     </div>
                     <div class="col-sm-6 text-muted">
                         <h3>Explore & Connect</h3>
