Added create section

--- a/Projects/LoopLab/index.html
+++ b/Projects/LoopLab/index.html
@@ -87,7 +87,7 @@
             <div class="container text-white text-center py-5">
                 <h1 class="display-4">Explore</h1>
                 <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, ipsum in voluptates at commodi unde minima cumque fuga expedita alias maxime sint obcaecati voluptatem placeat est soluta eligendi. Blanditiis, itaque?</p>
-                <button class="btn btn-outline-secondary">Find out more</button>
+                <button class="btn btn-outline-secondary">Find Out More</button>
             </div>
         </div>
         <div class="container-fluid bg-light">
@@ -118,8 +118,46 @@
             </div>
         </div>
     </div>
-    <div id="create"></div>
+    <div id="create">
+        <div class="container-fluid bg-primary">
+            <div class="container text-center text-white py-5">
+                <h1 class="display-4">Create</h1>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque incidunt iusto consequatur ducimus, modi maxime possimus recusandae ab nulla ea quisquam nam placeat sequi eveniet iure. Commodi ipsam neque enim.
+                </p>
+                <button class="btn btn-outline-light">Find Out More</button>
+            </div>
+        </div>
+        <div class="container-fluid bg-dark text-white">
+            <div class="container py-5">
+                <div class="row align-items-center">
+                    <div class="col-sm-6">
+                        <h3>Create your passion</h3>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta repellendus excepturi vitae nobis expedita eos in voluptate earum illo dignissimos.
+                        </p>
+                        <div class="media align-items-center mt-3">
+                            <i class="fas fa-check rounded blue-check fa-2x p-1 mx-4"></i>
+                            <div class="media-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolores recusandae, atque officia ipsum rem.
+                            </div>
+                        </div>
+                        <div class="media align-items-center mt-3">
+                            <i class="fas fa-check rounded blue-check fa-2x p-1 mx-4"></i>
+                            <div class="media-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolores recusandae, atque officia ipsum rem.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <img src="img/create-section1.jpg" alt="" class="img-fluid rounded-circle">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="share"></div>
+    <div id="footer"></div>
 
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
