--- a/Projects/LoopLab/index.html
+++ b/Projects/LoopLab/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--START HERE-->
-    <div class="nav navbar navbar-expand-sm navbar-dark bg-dark fixed-top nav-border-bottom-blue">
+    <div class="nav navbar navbar-expand-sm navbar-dark bg-dark fixed-top nav-border-bottom-blue" id="looplab-nav">
         <div class="container">
             <a href="#" class="navbar-brand">LoopLAB</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#looplab-navbar">
@@ -165,6 +165,28 @@
     <script>
         // Get the current year for copywrite
         $('#year').text(new Date().getFullYear());
+
+        $('body').scrollspy({target: '#looplab-nav'});
+
+        // Add smooth scrolling
+        $('#looplab-nav a').on('click', function(e){
+        // Check for hash value
+        if(this.hash !== ''){
+            // Prevent default behavior
+            e.preventDefault();
+
+            // Store hash
+            const hash = this.hash;
+
+            // Animate smooth scroll
+            $('html, body').animate({
+            scrollTop: $(hash).offset().top
+            }, 900, function(){
+            // Add hash to window after scroll
+            window.location.hash = hash;
+            })
+        }
+        });
     </script>
 </body>
 </html>
