--- a/Projects/LoopLab/index.html
+++ b/Projects/LoopLab/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <div class="container-fluid mt-5" id="home">
+    <div class="container-fluid mt-5 px-0" id="home">
         <div class="darken-existing-bg py-5">
             <div class="container">
                 <div class="row align-items-center">
