Added share section

--- a/Projects/LoopLab/index.html
+++ b/Projects/LoopLab/index.html
@@ -156,7 +156,44 @@
             </div>
         </div>
     </div>
-    <div id="share"></div>
+    <div id="share">
+        <div class="container-fluid bg-primary text-white text-center">
+            <div class="container py-5">
+                <h1 class="display-4">Share</h1>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum! Corporis architecto dignissimos facilis consequatur labore consectetur error alias quae explicabo, nihil sed officia quam aperiam unde qui illo praesentium.
+                </p>
+                <button class="btn btn-outline-light">Find Out More</button>
+            </div>
+        </div>
+        <div class="container-fluid bg-light text-muted">
+            <div class="container py-5">
+                <div class="row align-items-center">
+                    <div class="col-sm-6">
+                        <img src="img/share-section1.jpg" alt="" class="img-fluid rounded-circle">
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Share what you create</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores neque deleniti sequi repudiandae. Animi ab sequi at cumque earum nisi!
+                        </p>
+                        <div class="media align-items-center mt-3">
+                            <i class="fas fa-check-square fa-3x p-1 mx-3 white-check"></i>
+                            <div class="media-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quae tempora harum deserunt. Temporibus, quidem.
+                            </div>
+                        </div>
+                        <div class="media align-items-center mt-3">
+                            <i class="fas fa-check-square fa-3x p-1 mx-3 white-check"></i>
+                            <div class="media-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quae tempora harum deserunt. Temporibus, quidem.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="footer"></div>
 
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
