--- a/Projects/LoopLab/index.html
+++ b/Projects/LoopLab/index.html
@@ -91,12 +91,12 @@
             </div>
         </div>
         <div class="container-fluid bg-light">
-            <div class="container">
-                <div class="row align-items-center py-5">
-                    <div class="col-sm-6">
-                        <img class="img-fluid rounded-circle" src="img/explore-section1.jpg" alt="">
+            <div class="container py-5">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <img class="img-fluid rounded-circle py-5" src="img/explore-section1.jpg" alt="">
                     </div>
-                    <div class="col-sm-6 text-muted">
+                    <div class="col-md-6 text-muted">
                         <h3>Explore & Connect</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, earum. Voluptas dolorum autem nesciunt omnis soluta, aperiam fugit illo porro.
@@ -131,7 +131,7 @@
         <div class="container-fluid bg-dark text-white">
             <div class="container py-5">
                 <div class="row align-items-center">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <h3>Create your passion</h3>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta repellendus excepturi vitae nobis expedita eos in voluptate earum illo dignissimos.
@@ -149,8 +149,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
-                        <img src="img/create-section1.jpg" alt="" class="img-fluid rounded-circle">
+                    <div class="col-md-6">
+                        <img src="img/create-section1.jpg" alt="" class="img-fluid rounded-circle py-5">
                     </div>
                 </div>
             </div>
@@ -169,10 +169,10 @@
         <div class="container-fluid bg-light text-muted">
             <div class="container py-5">
                 <div class="row align-items-center">
-                    <div class="col-sm-6">
-                        <img src="img/share-section1.jpg" alt="" class="img-fluid rounded-circle">
+                    <div class="col-md-6">
+                        <img src="img/share-section1.jpg" alt="" class="img-fluid rounded-circle py-5">
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <h3>Share what you create</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores neque deleniti sequi repudiandae. Animi ab sequi at cumque earum nisi!
@@ -194,7 +194,15 @@
             </div>
         </div>
     </div>
-    <div id="footer"></div>
+    <div id="footer">
+        <div class="container-fluid bg-dark">
+            <div class="container text-center text-white py-4">
+                <h3>LoopLAB</h3>
+                <h6>Copyright © <span id="year"></span></h4>
+                <button class="btn btn-primary">Contact Us</button>
+            </div>
+        </div>
+    </div>
 
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
