--- a/Projects/LoopLab/index.html
+++ b/Projects/LoopLab/index.html
@@ -40,7 +40,7 @@
         <div class="darken-existing-bg py-5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-8 text-white my-5">
+                    <div class="col-md-8 text-white my-5 d-none d-md-block">
                         <h1 class="display-4">
                             Build social profiles and gain business profits
                         </h1>
