Started Mizuxe Navbar and header section done

--- a/Projects/Mizuxe/index.html
+++ b/Projects/Mizuxe/index.html
@@ -11,7 +11,56 @@
 </head>
 <body>
     <!--START HERE-->
-    
+    <div class="nav navbar fixed-top navbar-expand-sm navbar-light bg-light py-4" id="mizuxe-navbar">
+        <div class="container">
+            <a href="#" class="navbar-brand">
+                <img src="img/mlogo.png" height="50" width="50">
+                <h3 class="d-inline align-middle">Mizuxe</h3>
+            </a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#mizuxe-navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="#home" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#about" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#meet-the-authors" class="nav-link">Meet The Authors</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contact" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="background-image">
+        <div class="container-fluid blue-overlay">
+            <div class="container">
+                <div class="row text-white align-items-center py-4">
+                    <div class="col-lg-6 text-center">
+                        <h1 class="display-1">
+                            Do What You Dream Of...
+                        </h1>
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, assumenda.
+                        </p>
+                        <button class="btn btn-lg btn-outline-secondary text-white">
+                            <i class="fas fa-arrow-right pr-1"></i>Read More
+                        </button>
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="img/book.png" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -19,6 +68,28 @@
     <script>
         // Get the current year for copywrite
         $('#year').text(new Date().getFullYear());
+
+        $('body').scrollspy({target: '#mizuxe-nav'});
+
+        // Add smooth scrolling
+        $('#mizuxe-nav a').on('click', function(e){
+        // Check for hash value
+        if(this.hash !== ''){
+            // Prevent default behavior
+            e.preventDefault();
+
+            // Store hash
+            const hash = this.hash;
+
+            // Animate smooth scroll
+            $('html, body').animate({
+            scrollTop: $(hash).offset().top
+            }, 900, function(){
+            // Add hash to window after scroll
+            window.location.hash = hash;
+            })
+        }
+        });
     </script>
 </body>
 </html>
