--- a/Projects/Mizuxe/index.html
+++ b/Projects/Mizuxe/index.html
@@ -62,6 +62,22 @@
         </div>
     </div>
 
+    <div class="bg-dark">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-sm-4">
+                    <input class="form-control form-control-lg" type="text" placeholder="Enter Name">
+                </div>
+                <div class="col-sm-4">
+                    <input class="form-control form-control-lg" type="text" placeholder="Enter Email">
+                </div>
+                <div class="col-sm-4">
+                    <button class="btn btn-lg btn-new-primary btn-block">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
