Added cards / tiles section

--- a/Projects/Mizuxe/index.html
+++ b/Projects/Mizuxe/index.html
@@ -72,7 +72,52 @@
                     <input class="form-control form-control-lg" type="text" placeholder="Enter Email">
                 </div>
                 <div class="col-sm-4">
-                    <button class="btn btn-lg btn-new-primary btn-block">Subscribe</button>
+                    <button class="btn btn-lg bg-new-primary text-white btn-block">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row py-5">
+            <div class="col-md-3">
+                <div class="card outline-new-primary text-center px-3">
+                    <h4 class="card-title text-new-primary pt-3">
+                        Be Better
+                    </h4>
+                    <p class="text-muted">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, earum!
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card bg-new-primary text-white text-center px-3">
+                    <h4 class="card-title pt-3">
+                        Be Smarter
+                    </h4>
+                    <p class="text-white">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, earum!
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card outline-new-primary text-center px-3">
+                    <h4 class="card-title text-new-primary pt-3">
+                        Be Faster
+                    </h4>
+                    <p class="text-muted">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, earum!
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card bg-new-primary text-white text-center px-3">
+                    <h4 class="card-title pt-3">
+                        Be Stronger
+                    </h4>
+                    <p class="text-white">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, earum!
+                    </p>
                 </div>
             </div>
         </div>
