Finished the accordian section

--- a/Projects/Mizuxe/index.html
+++ b/Projects/Mizuxe/index.html
@@ -123,6 +123,69 @@
         </div>
     </div>
 
+    <div class="bg-light">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-sm-6 offset-sm-3 text-center">
+                    <h1 class="text-new-primary">
+                        Why This Book?
+                    </h1>
+                    <p class="lead py-3">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus, ratione.
+                    </p>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div id="accordian" class="text-center">
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="h5 m-0" href="#collapse-1" data-parent="#accordian" data-toggle="collapse">
+                                    <i class="fas fa-arrow-circle-down"></i>
+                                    Get Inspired
+                                </div>
+                            </div>
+                            <div id="collapse-1" class="collapse show">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos commodi maxime vel iusto facilis fuga nisi natus ea, dolorum incidunt fugit possimus consectetur? Obcaecati, illum corporis? Nesciunt dolore error atque.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="h5 m-0" href="#collapse-2" data-parent="#accordian" data-toggle="collapse">
+                                    <i class="fas fa-arrow-circle-down"></i>
+                                    Gain The Knowledge
+                                </div>
+                            </div>
+                            <div id="collapse-2" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos commodi maxime vel iusto facilis fuga nisi natus ea, dolorum incidunt fugit possimus consectetur? Obcaecati, illum corporis? Nesciunt dolore error atque.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="h5 m-0" href="#collapse-3" data-parent="#accordian" data-toggle="collapse">
+                                    <i class="fas fa-arrow-circle-down"></i>
+                                    Open Your Mind
+                                </div>
+                            </div>
+                            <div id="collapse-3" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos commodi maxime vel iusto facilis fuga nisi natus ea, dolorum incidunt fugit possimus consectetur? Obcaecati, illum corporis? Nesciunt dolore error atque.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
