Finished authors section

--- a/Projects/Mizuxe/index.html
+++ b/Projects/Mizuxe/index.html
@@ -186,6 +186,86 @@
         </div>
     </div>
 
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3 text-center">
+                <h1 class="text-new-primary">
+                    Meet The Authors
+                </h1>
+                <p class="lead">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, in quae. Error, sapiente id? Distinctio.
+                </p>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-lg-3 mt-5">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <img src="img/person1.jpg" class="img-fluid rounded-circle w-50 author-image">
+                        <h3>
+                            Susan Williams
+                        </h3>
+                        <p class="lead text-muted">
+                            Lead Writer
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi assumenda ducimus odio esse! Aut, consequuntur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-3 mt-5">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <img src="img/person2.jpg" class="img-fluid rounded-circle w-50 author-image">
+                        <h3>
+                            Grace Smith
+                        </h3>
+                        <p class="lead text-muted">
+                            Co-Writer
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi assumenda ducimus odio esse! Aut, consequuntur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-3 mt-5">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <img src="img/person3.jpg" class="img-fluid rounded-circle w-50 author-image">
+                        <h3>
+                            John Doe
+                        </h3>
+                        <p class="lead text-muted">
+                            Editor
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi assumenda ducimus odio esse! Aut, consequuntur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-3 mt-5">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <img src="img/person4.jpg" class="img-fluid rounded-circle w-50 author-image">
+                        <h3>
+                            Kevin Swanson
+                        </h3>
+                        <p class="lead text-muted">
+                            Designer
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi assumenda ducimus odio esse! Aut, consequuntur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
