--- a/Projects/Mizuxe/index.html
+++ b/Projects/Mizuxe/index.html
@@ -266,6 +266,26 @@
         </div>
     </div>
 
+    <div class="bg-light">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-9">
+                    <h3>Get In Touch</h3>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, mollitia?
+                    </p>
+                    <input type="text" placeholder="Name" class="form-control form-control-lg mt-3">
+                    <input type="email" placeholder="Email" class="form-control form-control-lg mt-3">
+                    <input type="text" placeholder="Message" class="form-control form-control-lg mt-3 message-textbox">
+                    <button class="btn bg-new-primary text-white btn-lg btn-block mt-3">Submit</button>
+                </div>
+                <div class="col-lg-3">
+                    <img src="img/mlogo.png" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
