--- a/Projects/Mizuxe/index.html
+++ b/Projects/Mizuxe/index.html
@@ -55,7 +55,7 @@
                         </button>
                     </div>
                     <div class="col-lg-6">
-                        <img src="img/book.png" class="img-fluid">
+                        <img src="img/book.png" class="img-fluid d-none d-lg-inline">
                     </div>
                 </div>
             </div>
@@ -284,6 +284,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="bg-new-primary py-5 text-center text-white">
+        <h4>Copyright © <span id="year"></span></h4>
     </div>
 
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
