Fixed scrollspy and navigation

--- a/Projects/Mizuxe/index.html
+++ b/Projects/Mizuxe/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--START HERE-->
-    <div class="nav navbar fixed-top navbar-expand-sm navbar-light bg-light py-4" id="mizuxe-navbar">
+    <div class="nav navbar fixed-top navbar-expand-sm navbar-light bg-light py-4" id="mizuxe-nav">
         <div class="container">
             <a href="#" class="navbar-brand">
                 <img src="img/mlogo.png" height="50" width="50">
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div class="background-image">
+    <div class="background-image" id="home">
         <div class="container-fluid blue-overlay">
             <div class="container">
                 <div class="row text-white align-items-center py-4">
@@ -123,7 +123,7 @@
         </div>
     </div>
 
-    <div class="bg-light">
+    <div class="bg-light" id="about">
         <div class="container py-5">
             <div class="row">
                 <div class="col-sm-6 offset-sm-3 text-center">
@@ -186,7 +186,7 @@
         </div>
     </div>
 
-    <div class="container py-5">
+    <div class="container py-5" id="meet-the-authors">
         <div class="row">
             <div class="col-sm-6 offset-sm-3 text-center">
                 <h1 class="text-new-primary">
@@ -266,7 +266,7 @@
         </div>
     </div>
 
-    <div class="bg-light">
+    <div class="bg-light" id="contact">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-9">
