--- a/Projects/Mizuxe/index.html
+++ b/Projects/Mizuxe/index.html
@@ -72,7 +72,7 @@
                     <input class="form-control form-control-lg" type="text" placeholder="Enter Email">
                 </div>
                 <div class="col-sm-4">
-                    <button class="btn btn-lg bg-new-primary text-white btn-block">Subscribe</button>
+                    <button class="btn btn-lg bg-primary text-white btn-block">Subscribe</button>
                 </div>
             </div>
         </div>
@@ -81,8 +81,8 @@
     <div class="container">
         <div class="row py-5">
             <div class="col-md-3">
-                <div class="card outline-new-primary text-center px-3">
-                    <h4 class="card-title text-new-primary pt-3">
+                <div class="card outline-primary text-center px-3">
+                    <h4 class="card-title text-primary pt-3">
                         Be Better
                     </h4>
                     <p class="text-muted">
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card bg-new-primary text-white text-center px-3">
+                <div class="card bg-primary text-white text-center px-3">
                     <h4 class="card-title pt-3">
                         Be Smarter
                     </h4>
@@ -101,8 +101,8 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card outline-new-primary text-center px-3">
-                    <h4 class="card-title text-new-primary pt-3">
+                <div class="card outline-primary text-center px-3">
+                    <h4 class="card-title text-primary pt-3">
                         Be Faster
                     </h4>
                     <p class="text-muted">
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card bg-new-primary text-white text-center px-3">
+                <div class="card bg-primary text-white text-center px-3">
                     <h4 class="card-title pt-3">
                         Be Stronger
                     </h4>
@@ -127,7 +127,7 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-sm-6 offset-sm-3 text-center">
-                    <h1 class="text-new-primary">
+                    <h1 class="text-primary">
                         Why This Book?
                     </h1>
                     <p class="lead py-3">
@@ -189,7 +189,7 @@
     <div class="container py-5" id="meet-the-authors">
         <div class="row">
             <div class="col-sm-6 offset-sm-3 text-center">
-                <h1 class="text-new-primary">
+                <h1 class="text-primary">
                     Meet The Authors
                 </h1>
                 <p class="lead">
@@ -277,7 +277,7 @@
                     <input type="text" placeholder="Name" class="form-control form-control-lg mt-3">
                     <input type="email" placeholder="Email" class="form-control form-control-lg mt-3">
                     <input type="text" placeholder="Message" class="form-control form-control-lg mt-3 message-textbox">
-                    <button class="btn bg-new-primary text-white btn-lg btn-block mt-3">Submit</button>
+                    <button class="btn bg-primary text-white btn-lg btn-block mt-3">Submit</button>
                 </div>
                 <div class="col-lg-3">
                     <img src="img/mlogo.png" class="img-fluid">
@@ -286,7 +286,7 @@
         </div>
     </div>
 
-    <div class="bg-new-primary py-5 text-center text-white">
+    <div class="bg-primary py-5 text-center text-white">
         <h4>Copyright © <span id="year"></span></h4>
     </div>
 
