--- a/Projects/3-Glozzom/home.html
+++ b/Projects/3-Glozzom/home.html
@@ -39,6 +39,42 @@
         </div>
     </div>
 
+    <div class="carousel slide mb-5" data-ride="carousel" id="slider">
+        <ol class="carousel-indicators">
+            <li class="active" data-target="#slider" data-slide-to="0"></li>
+            <li data-target="#slider" data-slide-to="1"></li>
+            <li data-target="#slider" data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+            <img class="d-block img-fluid" src="img/image1.jpg" alt="First Slide">
+            <div class="carousel-caption d-none d-md-block text-right">
+                <h3>Heading 1</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur veritatis minus nemo illo libero molestias! Eaque nam aut corporis eligendi.</p>>
+            </div>
+            </div>
+            <div class="carousel-item">
+            <img class="d-block img-fluid" src="img/image2.jpg" alt="Second Slide">
+            <div class="carousel-caption d-none d-md-block text-center">
+                <h3>Heading 2</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur veritatis minus nemo illo libero molestias! Eaque nam aut corporis eligendi.</p>>
+            </div>              
+            </div>
+            <div class="carousel-item">
+            <img class="d-block img-fluid" src="img/image3.jpg" alt="Third Slide">
+            <div class="carousel-caption d-none d-md-block text-left">
+                <h3>Heading 3</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur veritatis minus nemo illo libero molestias! Eaque nam aut corporis eligendi.</p>>
+            </div>              
+            </div>
+        </div>
+
+        <!--CONTROLS-->
+        <a href="#slider" class="carousel-control-prev" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
+        <a href="#slider" class="carousel-control-next" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+        </div>
+
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
