--- a/Projects/3-Glozzom/home.html
+++ b/Projects/3-Glozzom/home.html
@@ -48,25 +48,28 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img class="d-block img-fluid" src="img/image1.jpg" alt="First Slide">
-            <div class="carousel-caption d-none d-md-block text-right">
-                <h3>Heading 1</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur veritatis minus nemo illo libero molestias! Eaque nam aut corporis eligendi.</p>>
-            </div>
-            </div>
-            <div class="carousel-item">
-            <img class="d-block img-fluid" src="img/image2.jpg" alt="Second Slide">
-            <div class="carousel-caption d-none d-md-block text-center">
-                <h3>Heading 2</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur veritatis minus nemo illo libero molestias! Eaque nam aut corporis eligendi.</p>>
-            </div>              
+                <img class="d-block img-fluid" src="img/image1.jpg" alt="First Slide">
+                <div class="carousel-caption d-none d-md-block text-right pb-5">
+                    <h3 class="display-3">Heading One</h3>
+                    <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur veritatis minus nemo illo libero molestias! Eaque nam aut corporis eligendi.</p>
+                    <button class="btn btn-lg btn-danger">Sign Up Now</button>
+                </div>
             </div>
             <div class="carousel-item">
-            <img class="d-block img-fluid" src="img/image3.jpg" alt="Third Slide">
-            <div class="carousel-caption d-none d-md-block text-left">
-                <h3>Heading 3</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur veritatis minus nemo illo libero molestias! Eaque nam aut corporis eligendi.</p>>
-            </div>              
+                <img class="d-block img-fluid" src="img/image2.jpg" alt="Second Slide">
+                <div class="carousel-caption d-none d-md-block text-center pb-5">
+                    <h3 class="display-3">Heading Two</h3>
+                    <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur veritatis minus nemo illo libero molestias! Eaque nam aut corporis eligendi.</p>
+                    <button class="btn btn-lg btn-primary">Learn More</button>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block img-fluid" src="img/image3.jpg" alt="Third Slide">
+                <div class="carousel-caption d-none d-md-block text-right pb-5">
+                    <h3 class="display-3">Heading Three</h3>
+                    <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur veritatis minus nemo illo libero molestias! Eaque nam aut corporis eligendi.</p>
+                    <button class="btn btn-lg btn-success">Learn More</button>
+                </div>
             </div>
         </div>
 
