--- a/Projects/3-Glozzom/home.html
+++ b/Projects/3-Glozzom/home.html
@@ -76,7 +76,33 @@
         <!--CONTROLS-->
         <a href="#slider" class="carousel-control-prev" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
         <a href="#slider" class="carousel-control-next" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+    </div>
+
+    <div class="container">
+        <div class="row text-center pb-5">
+            <div class="col-md-4">
+                <!-- TODO: Add font-awesome icon -->
+                <h3>Tuning Gears</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, nihil.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <!-- TODO: Add font-awesome icon -->
+                <h3>Sending Data</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, nihil.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <!-- TODO: Add font-awesome icon -->
+                <h3>Making Money</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, nihil.
+                </p>
+            </div>
         </div>
+    </div>
 
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
