Added inline form and copyright info

--- a/Projects/3-Glozzom/home.html
+++ b/Projects/3-Glozzom/home.html
@@ -104,6 +104,74 @@
         </div>
     </div>
 
+    <!-- TODO: Add first parallelax image -->
+
+    <div class="container">
+        <div class="row py-5 align-items-center">
+            <div class="col-md-6">
+                <h3>Lorem Ipsum</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, doloribus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, ducimus!
+                </p>
+                <button class="btn btn-outline-danger">Learn More</button>
+            </div>
+            <div class="col-md-6">
+                <img src="img/laptop.png" alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <!-- TODO: Add second parallelax image and video link -->
+
+    <div class="container py-5">
+        <div class="row text-center">
+            <div class="col-12">
+                <h2>Photo Gallery</h2>
+                <p>Check out our photos</p>
+            </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col-md-4">
+                <img src="img/image1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+                <img src="img/image2.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+                <img src="img/image3.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/image2.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+                <img src="img/image3.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+                <img src="img/image1.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-dark py-5">
+        <div class="container text-white text-center">
+            <h1>Sign Up For Our Newsletter</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, laudantium? Aliquam laborum eaque placeat ipsam beatae voluptatum eligendi fugit inventore!
+            </p>
+            <form action="" class="form-inline justify-content-center">
+                <input type="text" placeholder="Enter Name" class="form-control mx-1">
+                <input type="email" placeholder="Enter Email" class="form-control mx-1">
+                <button class="btn btn-primary mx-1">Submit</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="bg-black py-5 text-center text-white">
+        <h5 class="m-0">Copyright © <span id="year"></span></h5>
+    </div>
+
     <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
