Added a couple more sections

--- a/Projects/3-Glozzom/about.html
+++ b/Projects/3-Glozzom/about.html
@@ -39,7 +39,36 @@
         </div>
     </div>
 
+    <!-- TODO: add parallelax effect -->
+    <div class="container-fluid text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 offset-3">
+                    <h1>About Us</h1>
+                    <p class="lead">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, omnis.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-sm-6">
+                <h1>What We Do</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed amet molestiae et dignissimos eveniet molestias quam accusantium, possimus corrupti accusamus, dolore, esse quod quia reiciendis a ipsum nobis repellendus quidem in ratione nam aliquid dolorum quo voluptas. Dolores fugiat at molestiae voluptates! Nemo asperiores cum laborum quos excepturi ullam accusantium!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime molestiae, fugit accusantium iste accusamus minima sed dolore quaerat labore fugiat laudantium facere doloremque quae mollitia natus amet? Dicta rerum iure consectetur, magni, quaerat quibusdam omnis deserunt inventore quisquam eos minima obcaecati non! Ipsa unde ea esse totam corrupti incidunt illum?
+                </p>
+            </div>
+            <div class="col-sm-6">
+                <!-- TODO: Add image -->
+            </div>
+        </div>
+    </div>
 
     <div class="bg-black py-5 text-center text-white">
         <h5 class="m-0">Copyright © <span id="year"></span></h5>
